--- a/config/database.yml
+++ b/config/database.yml
@@ -1,27 +1,31 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  username: nada
+  password: nada123
   timeout: 5000
 
 development:
   <<: *default
   database: judge_development
-  username: nada
-  password: nada123
+  #username: nada
+  #password: nada123
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: judge_test
+  database: task2_test
 
 production:
   <<: *default
-  database: judge_production
+  host: localhost
+  adapter: postgresql
+  encoding: utf8
+  database: task2_production
+  pool: 5
+  username: <%= ENV['task2_DATABASE_USER'] %>
+  password: <%= ENV['task2_DATABASE_PASSWORD'] %>
+
