--- a/config/database.yml
+++ b/config/database.yml
@@ -8,16 +8,16 @@ default: &default
 
 development:
   <<: *default
-  database: judge_development
-  #username: nada
-  #password: nada123
+  database: judge_test
+  username: nada
+  password: nada123
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: task2_test
+  database: judge_test
 
 production:
   <<: *default
